Tests/JTran.Transform.UnitTests/Test Transforms/SyntaxErrors/variable.jtran
{
    "#variable(bob)": 
    {
      "name":  
    },

    "#foreach(Customers)":
    {
        "LastName":    "#(Surname)",
        "FirstName":   "#($bob.name)",
        "Age":         "#(Age)",
        "Address":     "#(Address)"
    }
}